Card layout - Grid

--- a/block-BHaacw/index.html
+++ b/block-BHaacw/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Card Layout Grid</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
+    <body>
+        <main>
+            <header>
+                <h1>Card Layout</h1>
+                <nav>
+                    <ul>
+
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">References</a></li>
+                        <li><a href="#">Contact</a></li>
+
+                    </ul>
+                </nav>
+            </header>
+
+            <section class="grid">
+
+                <article>
+                    <h2>"1 The Title"</h2>
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+                <article class="grid-row-span-3">
+                    <h2>"2 The Title"</h2>
+                    <div class="image">
+                        <!-- <img src="assets/Thinking-of-getting-a-cat.png" alt="cat"> -->
+                    </div>
+
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+                <article>
+                    <h2>"3 The Title"</h2>
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+                <article class="grid-row-span-2">
+                    <h2>"4 The Title"</h2>
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <div><img src="assets/monitoring_FILL0_wght400_GRAD0_opsz48.png" alt="graph"></div>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+                <article>
+                    <h2>"5 The Title"</h2>
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+                <article>
+                    <h2>"6 The Title"</h2>
+                    <p>"Some Text goes here, some text goes here, some text goes here, some text goes here."</p>
+                    <p>
+                        <a href="">"Learn more"</a>
+                    </p>
+                </article>
+            </section>
+        </main>
+    </body>
 </html>
